# gateway-derive

./: .npmignore  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: test.yaml
programs/gateway-derive/: Cargo.toml
programs/gateway-derive/src/: gateway_client.rs  lib.rs  util.rs
src/: DerivedPassService.ts  index.ts
src/lib/: util.ts
tests/: gatekeeperUtils.ts  gatewayDerive.ts
ui/: .env.example  README.md  config-overrides.js  package.json  tsconfig.json
ui/public/: index.html
ui/scripts/: createSingleUsePass.ts  util.ts
ui/src/: App.css  App.tsx  IssuePass.tsx  useDerivedPass.ts
